# LLM-Reviewer

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml  reviewer.spec
docs/: API_SPEC.yaml  ARCHITECTURE.md  EVENT_SCHEMA.md  INTEGRATION_GUIDE.md
docs/adr/: 001-sse-over-websocket.md  002-one-client-many-sessions.md  003-model-router-priority.md  004-agent-guardrails-and-timeout-strategy.md  004-copilot-sdk-tool-api.md  005-orchestrator-plan-event.md  005-tool-schema-ref-inlining.md  006-orchestrator-layered-exploration-strategy.md
scripts/: build-reviewer.ps1  start-app.ps1  start-app.sh
src/: reviewer_launcher.py
src/backend/: app_runtime.py  auth_status.py  config.py  logging_config.py  main.py  review_inputs.py  sdk_compat.py
src/backend/api/: dependencies.py  schemas.py
src/backend/api/routes/: app_control.py  auth.py  models.py  reviews.py  sse.py
src/backend/orchestration/: event_bus.py  model_router.py  orchestrator.py  report_artifacts.py  review_estimator.py  review_store.py  session_manager.py  strict_pipeline.py  strict_types.py  verification.py
src/backend/tools/: codebase.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/frontend/src/: App.jsx  ThemeContext.jsx  main.jsx
tests/: conftest.py
tests/integration/: test_api.py  test_live_cli_sse.py
tests/unit/: test_codebase_tools.py  test_event_bus.py  test_model_router.py  test_report_artifacts.py  test_review_estimator.py  test_review_inputs.py  test_strict_pipeline.py  test_verification.py
(+26 files in other folders)
